--- a/data/strings/en.ini
+++ b/data/strings/en.ini
@@ -111,6 +111,8 @@ file_format_indexed_mode = Indexed mode
 file_format_layers = Layers
 file_format_palette_changes = Palette changes between frames
 file_format_rgb_mode = RGB mode
+gif_format_min_duration = Frame duration lower than 20ms.
+gif_format_duration_limitation = Millisec frame precision (duration will adjust to multiples of 10 ms).
 invalid_chars_in_filename = <<<END
 Error
 <<The file name cannot contain the following character(s):
